--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -399,6 +399,8 @@
     "stationboard.business.business.detail": "Business trip",
     "stationboard.business.commute": "Commute",
     "stationboard.business.commute.detail": "Between home and work place",
+    "stationboard.ringbahn.clockwise": "Ringbahn 🔃 clockwise",
+    "stationboard.ringbahn.counterclockwise": "Ringbahn 🔄 counterclockwise",
     "status.ogp-title": ":name's journey with Träwelling",
     "status.ogp-description": ":distancekm from :origin to :destination in :linename.|:distancekm from :origin to :destination in line :linename.",
     "status.visibility.0": "Public",
